2009-09-14  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* manual/fdl-book.tex: Change appendix chapter numbering (for
	hyperlatex) after adding glossary.

	* manual/gpg4win-compendium-de.tex: Add glossary and legend.

	* manual/gpg4win-compendium-de.tex: Add comment about AES and OL.

2009-09-10  Bernhard Reiter <bernhard@intevation.de>
	* website/download-de.htm4, website/download.htm4: Moved 2.0.1rc1
	  to the top. Added sha1sum and direct link to the OpenPGP sig to it.

	* website/index.htm4, website/index-de.htm4: Added stronger hints
	  for Outlook users to use 2.0.1rc1.

	* website/README: Added warning that latin1 locale might be needed
	  for building.

2009-09-03  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/versions.m4: Update Kleopatra link.

2009-09-01  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/index.htm4, website/download.htm4
	 * website/index-de.htm4: Add 2.0.1 RC1 announcement.

2009-08-31  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/download-de.htm4, website/download.htm4: Add 2.0.1 RC1 download section.

	 * manual/gpg4win-compendium-de.tex: Formatting.

	 * manual/Makefile.am
	 * manual/sc-kleopatra-openpgp-decrypt-email_de.png:
	 Add new screenshot.

2009-08-19  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * README.ar.txt, README.es.txt, README.fr.txt, README.ru.txt:
	 Add English README file for other supported installer languages.

	 * README.en.txt, README.de.txt: Update smart card instructions.

	 * index.htm4, index-de.htm4: Add smart card news an link to README files.

	 * documentation.htm4, documentation-de.htm4, download-de.htm4
	 * download.htm4: Add link to HTML version of compendium.

2009-08-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	 * website/download.htm4, website/download-de.htm4: Add link to
	 README.{de,en}.txt

	 * manual/sc-inst-welcome_de.png: Update screenshot.

2009-08-15  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
