@@ -17,6 +17,9 @@
 # along with this program; if not, write to the Free Software
 # Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA
 
-EXTRA_DIST = nsi-mode.el  README.en.txt README.de.txt pkg-copyright.txt
+EXTRA_DIST = nsi-mode.el pkg-copyright.txt \
+	     README.ar.txt README.de.txt README.en.txt README.es.txt \
+	     README.fr.txt README.ru.txt
+
 
 SUBDIRS = logo manual website
