@@ -28,6 +28,11 @@ Section "-gpg4win" SEC_gpg4win
 
   File "${BUILD_DIR}/README.en.txt"
   File "${BUILD_DIR}/README.de.txt"
+  File "${BUILD_DIR}/README.ar.txt"
+  File "${BUILD_DIR}/README.es.txt"
+  File "${BUILD_DIR}/README.fr.txt"
+  File "${BUILD_DIR}/README.ru.txt"
+
   File "${BUILD_DIR}/versioninfo.txt"
 
   # Write a version file.
