@@ -1,12 +1,15 @@
-2009-09-28  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
-
-	* NEWS: Add Kleo version number.
-	
-	* configure.ac: Change compendiuim-de date and version (3.0.0-beta4)
-
 2009-09-28  Werner Koch  <wk@g10code.com>
 
 	Release 2.0.1.
+
+	* src/inst-gpg4win.nsi: Install ar, es, fr and ru REDME files.
+	* src/uninst-gpg4win.nsi: Uninstall them.
+
+2009-09-28  Emanuel Schuetze  <emanuel.schuetze@intevation.de>
+
+	* configure.ac: Change compendium-de date and version (3.0.0-beta4)
+
+2009-09-28  Werner Koch  <wk@g10code.com>
 
 	* packages/packages.current: Update gpgol to 1.0.1.
 
